--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-red"></i>1224435534</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-solid fa-building-columns fa-fw w3-margin-right w3-text-red"></i>School Facts</b></p>
-          <p>Adobe Photoshop</p>
+          <p class="w3-large"><b><i class="fa fa-solid fa-building-columns fa-fw w3-margin-right w3-text-red"></i>School Values</b></p>
+          <p>Integrity</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:90%">90%</div>
           </div>
-          <p>Photography</p>
+          <p>Empathy</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div>
-          <p>Illustrator</p>
+          <p>Discovery</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:75%">75%</div>
           </div>
-          <p>Media</p>
+          <p>Learning</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-red" style="width:50%">50%</div>
           </div>
@@ -190,7 +190,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <!--T <hr> -->
         </div>
         <div class="w3-container">
-           </p><br>
+        </p><br>
 
           
         </div>
@@ -228,8 +228,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Find me on social media.</p>
+<footer class="w3-container w3-red w3-center w3-margin-top">
+  <p>Find us on social media.</p>
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
